# duckdb-ufsecp-extension

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
src/: ufsecp_extension.cpp  ufsecp_gpu.cu  ufsecp_gpu_opencl.cpp
src/include/: ufsecp_extension.hpp
test/sql/: ufsecp.test
